force-app/main/default/objects/Docket_Number_Suffix__c/Docket_Number_Suffix__c.object-meta.xml
<CustomObject>
    <label>Docket Number Suffix</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Symphony ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docket Number Suffix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>