force-app/main/default/objects/Docket_Number_Suffix__c/fields/DocketGroup__c.field-meta.xml
<CustomField>
    <fullName>DocketGroup__c</fullName>
    <label>DocketGroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group-1</fullName>
            </value>
            <value>
                <fullName>Group-2</fullName>
            </value>
            <value>
                <fullName>Group-3</fullName>
            </value>
            <value>
                <fullName>Group-4</fullName>
            </value>
            <value>
                <fullName>Group-5</fullName>
            </value>
            <value>
                <fullName>Group-6</fullName>
            </value>
            <value>
                <fullName>Group-7</fullName>
            </value>
            <value>
                <fullName>Group-8</fullName>
            </value>
            <value>
                <fullName>Group-9</fullName>
            </value>
            <value>
                <fullName>Group-10</fullName>
            </value>
            <value>
                <fullName>Group-11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>