force-app/main/default/objects/Docket_Number_Suffix__c/fields/Family_Counter__c.field-meta.xml
<CustomField>
    <fullName>Family_Counter__c</fullName>
    <formula>MID(TEXT(Family_ID__c),2,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Counter</label>
    <type>Text</type>
</CustomField>