force-app/main/default/objects/Docket_Number_Suffix__c/fields/Family_ID__c.field-meta.xml
<CustomField>
    <fullName>Family_ID__c</fullName>
    <formula>SuffixCounter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>