force-app/main/default/objects/Docket_Number_Suffix__c/fields/Family_ID_Start_Number__c.field-meta.xml
<CustomField>
    <fullName>Family_ID_Start_Number__c</fullName>
    <label>Family ID Start Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>