force-app/main/default/objects/Docket_Number_Suffix__c/fields/SuffixCounter__c.field-meta.xml
<CustomField>
    <fullName>SuffixCounter__c</fullName>
    <label>SuffixCounter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>